--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,3 +11,35 @@
 body{
     font-family: 'Arimo', sans-serif;
 }
+
+/***** Override Bootstrap *****/
+
+.pagination {
+
+    .page:not(.active), .btn-nav.link:not(.disabled) {
+        cursor: pointer;
+    }
+
+}
+
+.panel-collapsible {
+
+    .panel-title > a:before {
+        float: right !important;
+        font-family: FontAwesome;
+        content: "\f068";
+        padding-right: 5px;
+    }
+
+    .panel-title > a.collapsed:before {
+        float: right !important;
+        content: "\f067";
+    }
+
+    .panel-title > a:hover,
+    .panel-title > a:active,
+    .panel-title > a:focus  {
+        text-decoration:none;
+    }
+
+}
